# dev-threads

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
mealdb/: package.json
mealdb/skills/meal-planner/: SKILL.md
mealdb/skills/picnic-recipe/: SKILL.md
src/dev_threads/: __init__.py  __main__.py  boxd.py  config.py  runner.py
src/dev_threads/integrations/: __init__.py  boxd.py  openclaw.py
src/dev_threads/interfaces/: __init__.py  text_interface.py  voice_interface.py
src/dev_threads/orchestrator/: __init__.py  context_store.py  orchestrator.py
src/dev_threads/threads/: __init__.py  manager.py  thread.py
tests/: conftest.py  test_boxd.py  test_integrations.py  test_manager.py  test_orchestrator.py  test_runner.py  test_thread.py
