[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dev-threads"
version = "0.1.0"
description = "Orchestrate multiple Claude Code dev threads from a single text or voice interface"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    # HTTP client
    "httpx>=0.27",
    # Rich TUI
    "rich>=13",
    "textual>=0.60",
    # Configuration
    "pydantic-settings>=2",
    # Persistence
    "sqlmodel>=0.0.18",
    # Voice: speech-to-text + text-to-speech
    "SpeechRecognition>=3.10",
    "pyttsx3>=2.90",
    # Async
    "anyio>=4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-anyio>=0.0.0",
    "pytest-mock>=3",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
dev-threads = "dev_threads.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dev_threads"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 99
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
